# IdeaHub

./: .dockerignore  .env  .env.example  AI_EXECUTOR_BRIEF.md  ARCHITECTURE.md  Dockerfile  Dockerfile.dev  Makefile  README.md  REPORTING_API_GIST.md  alembic.ini  docker-compose.dev.yml  docker-compose.yml  init.sql  pyproject.toml  requirements.txt
api_models/: campaign.py  community.py  idea.py  label.py  member.py  stage.py  workspace.py
apps/gateway/: main.py
apps/gateway/routers/: community.py  health.py  idea.py  (+3 more)
domains/campaign/: __init__.py  repository.py  service.py
domains/community/: __init__.py  repository.py  service.py
domains/idea/: __init__.py  commands.py  repository.py  rules.py  service.py
domains/member/: __init__.py  repository.py  service.py
domains/workspace/: __init__.py  repository.py  service.py
ideahub_platform/: __init__.py
ideahub_platform/authz/: __init__.py  dsl.py  engine.py  predicates.py  registry.py
ideahub_platform/common/: errors.py  logging.py  tenant.py
ideahub_platform/db/: base.py
ideahub_platform/events/: bus.py  event_types.py
ideahub_platform/i18n/: __init__.py  manager.py
ideahub_platform/reporting/: __init__.py  data_provider.py  models.py  processors.py  services.py
locales/: en.json  es.json
mappers/: community_mapper.py  idea_mapper.py  workspace_mapper.py
nginx/: nginx.conf
scripts/: generate-ssl.sh
tests/: test_health.py
ui/: Dockerfile  Dockerfile.dev  index.html  nginx.conf  package.json  tailwind.config.js  vite.config.ts
ui/src/: App.tsx  index.css  main.tsx  vite-env.d.ts
(+40 files in other folders)
