[tool.poetry]
name = "ideascale-py"
version = "0.1.0"
description = "IdeaScale Python rewrite (modular monolith)"
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [
  { include = "apps" },
  { include = "ideahub_platform" },
  { include = "domains" },
  { include = "api_models" },
]
# Exclude duplicate nested package tree from distribution to avoid import ambiguity
exclude = [
  "ideahub_platform/ideahub_platform/**"
]

[tool.poetry.dependencies]
python = ">=3.11,<3.13"
fastapi = "^0.115.0"
uvicorn = {extras = ["standard"], version = "^0.30.0"}
pydantic = "^2.7.0"
sqlalchemy = "^2.0.30"
asyncpg = "^0.29.0"
alembic = "^1.13.0"
httpx = "^0.27.0"
prometheus-client = "^0.20.0"
opentelemetry-distro = "^0.48b0"
opentelemetry-instrumentation-fastapi = "^0.48b0"
opentelemetry-instrumentation-sqlalchemy = "^0.48b0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.2.0"
pytest-asyncio = "^0.23.0"
ruff = "^0.5.0"
black = "^24.4.0"
mypy = "^1.10.0"

[build-system]
requires = ["poetry-core>=1.8.0"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 100

[tool.black]
line-length = 100

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
addopts = "-q"
